--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 						<li><a href="#work">послуги</a></li>
 						<li><a href="#about">Про КОМПАНІЮ</a></li>
 						<li><a href="#contact">контакти</a></li>
+						<li><a href="https://github.com/Zakharchuk42/gallery-adddel" target="_blank">GitHub</a></li>
 					</ul>
 				</div>
 			</div>
